--- a/css/styles.css
+++ b/css/styles.css
@@ -132,15 +132,66 @@ footer {
 
 @media (min-width: 1440px) {
 
+    body {
+        background-image: url(../images/bg-desktop.svg);
+        background-repeat: no-repeat;
+    }
+
+    header img {
+        margin: 5rem 0 0 5rem;
+        width: 40rem;
+    }
+
     main {
-        flex-direction: row;
+        display: flex;
         justify-content: center;
-        align-items: center;
+        flex-direction: row;
+        margin: 5rem 0 0 5rem;
+    }
+
+    .image img {
+        margin: 0;
+        width: 100rem;
+        height: 70rem;
+    }
+
+
+    .content {
+        text-align: left;
+        margin-left: 10rem;
+        width: 85rem;
+        height: 60rem;
+    }
+
+
+    .content-header {
+        font-size: 3.5rem;
+        line-height: 7rem;
+    }
+
+    .content-body {
+        font-size: 2rem;
+        margin: 1.5rem 0 6rem 0;
+        line-height: 3rem;
+        width: 62rem;
+    }
+
+    .button {
+        font-size: 1.7rem;
+        font-weight: 400;
+        padding: 2rem 6rem 2rem 6rem;
+        border-radius: 20rem;
+        box-shadow: 5px 10px 20px rgba(0,0,0,0.45);
     }
 
     footer {
         justify-content: end;
-        margin: 32.5rem 7.5rem 0 0;
+        margin: 0 15rem 0 0;
+    }
+
+    .icons svg {
+        width: 4.5rem;
+        height: 4.5rem;
     }
 
 }
