--- a/css/styles.css
+++ b/css/styles.css
@@ -139,54 +139,56 @@ footer {
 
     header img {
         margin: 5rem 0 0 5rem;
-        width: 40rem;
+        width: 22rem;
     }
 
     main {
         display: flex;
         justify-content: center;
+        align-items: center;
         flex-direction: row;
-        margin: 5rem 0 0 5rem;
+        margin-top: 7rem;
     }
 
     .image img {
-        margin: 0;
-        width: 100rem;
-        height: 70rem;
+        margin-left: 6rem;
+        width: 75rem;
+        height: 55rem;
     }
 
 
     .content {
         text-align: left;
-        margin-left: 10rem;
-        width: 85rem;
-        height: 60rem;
+        margin: 5rem 0 0 5rem;
+        width: 70rem;
+        height: 50rem;
     }
 
 
     .content-header {
-        font-size: 3.5rem;
-        line-height: 7rem;
+        font-size: 2.5rem;
+        line-height: 6rem;
+        margin-top: 1rem;
     }
 
     .content-body {
-        font-size: 2rem;
+        font-size: 1.6rem;
         margin: 1.5rem 0 6rem 0;
-        line-height: 3rem;
-        width: 62rem;
+        line-height: 2.5rem;
+        width: 50rem;
     }
 
     .button {
         font-size: 1.7rem;
         font-weight: 400;
-        padding: 2rem 6rem 2rem 6rem;
+        padding: 1.75rem 8rem 1.75rem 8rem;
         border-radius: 20rem;
         box-shadow: 5px 10px 20px rgba(0,0,0,0.45);
     }
 
     footer {
         justify-content: end;
-        margin: 0 15rem 0 0;
+        margin: 5rem 6.5rem 0 0;
     }
 
     .icons svg {
